package com;
/**
 * @author Antonin
 */
public class Aventurier extends Entite{

    /**
     * constructeur aventurier avec un nom
     * @param nom nom de l aventurier
     */
    public Aventurier(String nom){
        super(nom);
    }
}
