/**
 * Classe Chemin, represente un chemin dans le labyrinthe
 */
public class Chemin extends Case {

    /** Constructeur vide de Chemin */
    Chemin() {
        super(true);
    }
}