/**
 * Classe Mur, represente un Mur dans le labyrinthe
 */
public class Mur extends Case {

    /** Constructeur vide de Mur */
    Mur() {
        super(false);
    }
}